--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,14 +2,20 @@
 <html>
 <head>
   <title><%= title %> </title>
-  <%= stylesheet_link_tag    'blueprint/screen', :media => "screen" %>
-  <%= stylesheet_link_tag    'blueprint/print', :media => "print" %>
-  <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
+  <%= javascript_include_tag 'application' %>
+
+  <%= render 'layouts/stylesheets' %>
 </head>
 <body>
+  <div class="container"> 
+    <%= render 'layouts/header' %>
+    <section class="round">
+      <%= yield %>
+    </section>
 
-<%= yield %>
-
+    <%= render 'layouts/footer' %>
+  </div>
 </body>
+
 </html>
