--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,4 +2,5 @@
   <p>
     This is a home page for the Ruby on Rails Tutorial sample application
   </p>
-</body>
+
+  <%= link_to 'Sign up now!', '#', :class => 'signup_button round' %>
