--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,5 +1,4 @@
-<h1>About Us</h1>
+<h1>About</h1>
   <p>
     This is an about page for the Ruby on Rails Tutorial sample application
   </p>
-</body>
