--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,8 @@
     <section class="round">
       <%= yield %>
     </section>
-
     <%= render 'layouts/footer' %>
+    <%= debug(params) if Rails.env.development? %>zk
   </div>
 </body>
 
